tests/macros/duplicate/validate_async.rs
fn main() {
    let q = inquisition::questions![Input {
        async validate: todo!(),
        async validate: todo!(),
    }];
}
